# Set the minimum required version of CMake
cmake_minimum_required(VERSION 3.10)

# Define the project name
project(OpenCV_Project)

# Locate the OpenCV library package
# The REQUIRED flag ensures that CMake will error if OpenCV is not found.
find_package(OpenCV REQUIRED)

# Add the OpenCV include directories to the compiler’s search path.
# This is necessary for resolving #include <opencv2/...> directives.
include_directories(${OpenCV_INCLUDE_DIRS})

include_directories(${CMAKE_CURRENT_SOURCE_DIR})

# matpltplusplus
add_subdirectory(matplotplusplus)

# Define the executable target and its source files.
add_executable(${PROJECT_NAME} main.cpp featureDetection.cpp)

# Link the executable against the required OpenCV libraries.
target_link_libraries(${PROJECT_NAME} PUBLIC matplot ${OpenCV_LIBS} )


